# qhana-plugin-runner

./: .dockerignore  .flaskenv  .gitattributes  .gitignore  .readthedocs.yml  CHANGELOG.md  Dockerfile  NOTICE  README.md  celerybeat-schedule.db  conftest.py  default-concurrent-lauch.json  default-launch.json  docker-compose-test-mariadb.yml  docker-compose.yml  env  fix.diff  package-lock.json  pyproject.toml  services_proxy.py  services_proxy.py~  start.sh  tasks.py  test-requirements.txt
.github/workflows/: black.yml  container.yml  integration-tests.yml  mini_muse_image.yml  pytest.yml
amazonBraket_localSim/: braket_local.py
cirq/: cirq_simulator.py
cirq_simulator/: __init__.py  routes.py  tasks.py  utils.py
docs/: =0.5.2  all-plugins.md  asyncapi.json  cli.rst  conf.py  index.rst  plugin-overview.rst  plugin_autodoc.py  plugins-advanced.rst  plugins.rst  requirements.txt  templates.rst  testing.md  testing.rst
docs/adr/: 0003-plugin-runner-as-seperate-project.md  0004-use-python.md  0005-use-flask-template.md  0006-use-celery-task-queue.md  0007-plugins-must-provide-metadata.md  0008-use-micro-frontends-to-expose-algorithm-parameters.md  0009-always-pass-files-as-urls.md  0010-complex-plugin-interactions.md  0011-preprocess-previously-unkown-data.md  0012-repeating-steps-in-multi-step-plugins.md  0013-additional-endpoints-for-other-plugins.md  0014-add-recipe-data-type.md  0015-passing-through-result-steps.md  0015-subscribing-for-plugin-updates.md  0016-data-inputs-in-substeps.md  0017-schema-links.md  0018-celery-task-testing-strategy.md  0018-co-locate-plugin-tests.md  0019-celery-task-testing-strategy.md  0019-co-locate-plugin-tests.md  0020-nested-data-wu-palmer-pipeline-extension.md  0021-non-tree-taxonomies-pipeline-extension.md  index.rst
docs/data-formats/: data-loader-formats.md  data-model.rst  index.rst  recipes.rst
migrations/: env.py
mqt/: mqt_simulator.py
pennylane_default/: pennylane_defaultqubit.py
plugins/: README_objective_functions.md  aggregators.py  circuit-demo.py  costume_filter.py  costume_loader.py  csv_visualization.py  entity_filter.py  entity_points_converter.py  file_upload.py  get_entanglement.py  hello_world.py  hello_world_invoked.py  hello_world_multi_step.py  hybrid_ae.py  invokable_demo.py  json_visualization.py  manual_classification.py  mds.py  minio-storage.py  nisq_analyzer.py  one-hot.py  one-hot_encoding.py  pca.py  qiskit_simulator.py  qiskit_simulators.py  qnn.py  svm.py  sym_max_mean.py  time_tanh.py  transformers.py  visualization.py  wu_palmer.py  wu_palmer_cache.py  zip_merger.py
pytket_qulacs/: pytket_Qulacs.py
qhana_plugin_runner/: __init__.py  babel.py  celery.py  celery_worker.py  licenses.py  listeners.py  markdown.py  plugins_cli.py  requests.py  storage.py  tasks.py
templates/: Hello-World.json  MUSE.json  template_schema.json  template_scheme.json
tests/: conftests.py  test_celery_example.py  test_db.py  test_entity_attributes.py  test_entity_marshalling.py  test_plugin_imports.py  test_qiskit_executor_routes.py  test_templates_util.py  utils.py
(+1660 files in other folders)
