[tool.poetry]
name = "qhana_plugin_runner"
version = "0.1.0"
description = "The runner for QHAna plugins."
authors = ["QHAna authors"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = { extras = ["dotenv"], version = "^2.0.0" }
Flask-JWT-Extended = "^4.0.0"
Flask-Cors = "^3.0.10"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.0.0"
flask-babel = "^2.0.0"
flask-smorest = "^0.39.0"
tomlkit = "^0.7.0"
packaging = "^20.9"
celery = "^5.2.2"
redis = "^3.5.3"
requests = "^2.25.1"
typing-extensions = "^3.10.0"
mistune = "^2.0.2"
jsonschema = "^4.6.1"
sqlalchemy-json = "^0.5.0"
invoke = "^1.5.0"
psycopg2 = {version = "^2.9.3", optional = true}
PyMySQL = {version = "^1.0.2", optional = true}
linuxdoc = "^20221025"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^3.9.2"
pytest = "^6.2.4"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^21.4.3"
Sphinx = "^4.0.0"
sphinxcontrib-redoc = "^1.6.0"
sphinx-click = "^3.0.0"
myst-parser = "^0.15.1"
sphinx-rtd-theme = "^0.5.2"
sqlalchemy-json = "^0.5.0"
hypothesis = "^6.14.3"
pytest-cov = "^2.12.1"
pip-licenses = "^3.5.3"

[tool.poetry.extras]
psycopg2 = ["psycopg2"]
PyMySQL = ["PyMySQL"]

[tool.poetry.scripts]
#flask = 'flask.cli:main'

[tool.black]
target-version = ["py37"]
line-length = 90
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
reverse_relative = true
group_by_package = true
honor_noqa = true
atomic = true

[tool.sphinx]
copyright-year = 2021
enable-autodoc = true
enable-napoleon = true
enable-autosectionlabel = true
enable-markdown = true
enable-todo = true
# update gitignore if you want to edit docs/changelog.md manually!
include-changelog = true
# update gitignore if you want to edit docs/readme.md manually!
include-readme = true
# experimental/unstable feature
python_use_unqualified_type_names = true

[tool.sphinx.intersphinx-mapping]
python = ["https://docs.python.org/3"]
requests = ["https://requests.readthedocs.io/en/latest/"]
celery = ["https://docs.celeryproject.org/en/stable/"]
# user documentation
qhana = ["https://qhana.readthedocs.io/en/latest/"]

[tool.sphinx.autosectionlabel]
prefix-document = true

[tool.sphinx.myst]
# create anchors for h1 and h2
heading_anchors = 2
# markdown parser; see <https://myst-parser.readthedocs.io/en/latest/syntax/optional.html>
extensions = [
    #"amsmath",
    "colon_fence",
    "deflist",
    "dollarmath",
    "html_admonition",
    "html_image",
    #"linkify", # requires installation of linkify-it-py
    "replacements",
    "smartquotes",
    "substitution",
    "tasklist",
]
# substitutions = {"key": "substitution value"}

[tool.coverage.report]
# regexes for lines not to cover
exclude_lines = [
    # default coverage pragma
    "pragma: no cover",
    # protocol methods with ...
    "\\s*\\.\\.\\.\\s*",
    # unreachable code
    "if False:",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
